# assecor-assessment-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: customer.h
src/: customer.cpp
test/: CMakeLists.txt  CustomerTest.cpp
